Update README.md
Добавлены инструкции по запуску проекта.